[project]
name = "ORM python"
version = "0.1.0"
description = "This project is only for learning about ORM python with library sqlalchemy + alembic"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.3.0",
    "python-secrets>=24.10.12",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic"
]
